--- a/demo/package.json
+++ b/demo/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "sri-wztra-demo",
+  "name": "sri-extra-demo",
   "version": "0.1.0",
-  "description": "Sample project that uses scalajs-react and scalacss",
+  "description": "Reusable sri components",
   "repository": {
     "type": "git",
     "url": "https://github.com/chandu0101/sri-extra.git"
   },
   "scripts": {
-    "start": "webpack --watch & webpack-dev-server --progress --colors --port 8090",
+    "start": "webpack & webpack-dev-server --progress --colors --port 8090",
     "build": "webpack --config webpack.config.prod.js"
   },
   "devDependencies": {
@@ -19,33 +19,19 @@
     "imagemin": "^4.0.0",
     "less": "^2.3.1",
     "less-loader": "^2.2.2",
-    "lodash": "^3.9.3",
+    "lodash": "^4.12.0",
     "node-libs-browser": "^0.5.2",
-    "react-hot-loader": "^1.2.7",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   },
   "dependencies": {
-    "elemental": "v0.5.4",
     "highlight.js": "8.9.1",
     "history": "^3.0.0-2",
-    "material-ui": "v0.14.4",
-    "react": "^0.14.7",
-    "react-addons-create-fragment": "^0.14.7",
-    "react-addons-css-transition-group": "^0.14.7",
-    "react-addons-pure-render-mixin": "^0.14.7",
-    "react-addons-transition-group": "^0.14.7",
-    "react-addons-update": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-geomicons": "^2.0.4",
-    "react-infinite": "^0.7.1",
-    "react-select": "^1.0.0-beta",
-    "react-slick": "^0.9.3",
-    "react-spinner": "^0.2.3",
-    "react-tagsinput": "^3.0.3",
-    "react-tap-event-plugin": "^0.2.1",
-    "svg-loader": "0.0.2"
+    "material-ui": "^v0.15.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-tap-event-plugin": "^1.0.0"
   }
 }
